--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
+# This file lists all individuals having contributed content to the repository.
+
+# For how it is generated, see `hack/generate-authors.sh`.
+
 .SH AUTHORS
 Héctor Ordóñez - <hector.note0@gmail.com>
 
